examples/v1.0.0/commons/parse/ts/invalid/parse.receipt.invalid.2.ts
// INVALID parse.receipt #2 — missing result when status=success

export const parseReceiptInvalid2: any = {
  x402: {
    verb: "parse",
    version: "1.0.0",
    request_id: "req-parse-2025-11-19-0005"
  },
  trace: {
    trace_id: "trace-parse-0005"
  },
  status: "success"
};
